syntax = "proto3";

package proto;

option go_package = "../pb";

// The node event definition.
service NodeEvent {
    rpc Event (NodeEventReq) returns (NodeEventResp) {}
}

// The request message
message NodeEventReq {
    string eventType = 1;
    NodeEventReqData data = 2;
}

message NodeEventReqData {
    string processID = 1;
    string processInstanceID = 2;
    string nodeDefKey = 3;
}

// The response message
message NodeEventResp {
    enum StatusCode {
        SUCCESS = 0;
        FAILURE = -1;
    }

    StatusCode code = 1;
    string msg = 2;
    NodeEventRespData data = 3;
}

message NodeEventRespData {
    repeated string assignee = 1; // 节点处理人
}



